@@ -4,51 +4,96 @@ license          = Artistic_2_0
 copyright_holder = Robert Rothenberg
 copyright_year   = 2017
 
-[@Basic]
+[GatherDir]
+[PruneCruft]
+[License]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
 
 [RecommendedPrereqs]
 [AutoPrereqs]
 ;; [PrereqsClean]
 
+[EnsurePrereqsInstalled]
+:version = 0.003
+type = requires
+type = recommends
+
 [GitHub::Meta]
 repo = git://github.com/robrwo/Types-SQL.git
 
-[ReadmeFromPod]
-type = pod
+[PodWeaver]
+[ReadmeAnyFromPod]
+type     = gfm
+filename = README.md
+location = build
+
+[CopyFilesFromBuild]
+copy = README.md
 
 [ManifestSkip]
+[PruneFiles]
+match = ~$
 
 [Metadata]
+x_authority    = cpan:RRWO
+
 [MetaProvides::Package]
 [MetaJSON]
+[MetaYAML]
 
-[Prereqs / TestRecommends]
-Test::Warnings = 0
-Test::MinimmumVersion  = 0
-Test::Pod = 1.22
-Test::Pod::Coverage = 1.08
-Test::Perl::Critic = 0
-Test::NoTabs = 0
-Test::EOL = 0
+[Prereqs / TestRequires ]
+JSON::PP      = 2.00
+Path::Tiny    = 0.004
+Test::Most    = 0
+Time::Piece   = 1.16 ; in t/data
+Time::Seconds = 0
 
-[Prereqs / TestRequires]
-Test::More = 0.98
+; authordep Pod::Weaver::Plugin::AppendPrepend
+; authordep Pod::Weaver::Section::Contributors
+; authordep Pod::Weaver::Section::SourceGitHub
 
+[PodSyntaxTests]
+[Test::CheckManifest]
+;;[Test::CleanNamespaces]
+[Test::EOF]
+[Test::EOL]
+:version = 0.14
+[Test::Fixme]
+[Test::MinimumVersion]
+[Test::NoTabs]
 [Test::Perl::Critic]
+critic_config = t/etc/perlcritic.rc
 
-[TravisYML]
-perl_version = -blead -5.8 -5.10 5.12 5.14 5.16 5.18 5.20 5.22 5.24 5.26
+[Test::Pod::Coverage::Configurable]
+[Test::Pod::LinkCheck]
+[Test::Portability]
+; authordep Test::TrailingSpace
+[Test::TrailingSpace]
+filename_regex = \.(?:p[lm]|pod)\z
+[Test::Kwalitee]
+skiptest = use_strict
+[Test::ReportPrereqs]
+:version = 0.022
+version_extractor = Module::Metadata
+verify_prereqs = 1
 
 [@Git]
 allow_dirty = dist.ini
-allow_dirty = .travis.yml
 push_to     = origin master:master
+tag_format  = %v
+commit_msg  = %v%n%n%c
 
 [Git::Contributors]
+:version = 0.019
 
 [RewriteVersion]
-[Git::Tag]
-tag_format = %v
 [NextRelease]
 [BumpVersionAfterRelease]
 
