@@ -1,0 +1,32 @@
+[@CorePrep]
+
+[-SingleEncoding]
+
+;; [-Transformer]
+;; transformer = List
+
+[Name]
+[Version]
+
+[Region  / prelude]
+
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+
+[Collect / EXPORTS]
+command = function
+
+[Leftovers]
+
+[Region  / postlude]
+
+[SourceGitHub]
+[Bugs]
+
+[Authors]
+
+[Contributors]
+
+[Legal]
+
+[-AppendPrepend]
