@@ -1,2 +1,0 @@
-use Test::EOL;
-all_perl_files_ok({ trailing_whitespace => 1 }, qw/ lib t / );
