@@ -1,2 +1,0 @@
-use Test::NoTabs;
-all_perl_files_ok(qw/ lib t /);
