@@ -1,6 +1,0 @@
-#!/usr/bin/env perl
-
-use Test::More;
-
-use Test::MinimumVersion;
-all_minimum_version_ok('v5.8.8');
